<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sap.build-forms-extension</groupId>
    <artifactId>forms</artifactId>
    <version>1.0.2</version>

    <name>forms</name>
    <description>Forms parent project</description>

    <packaging>pom</packaging>

    <modules>
        <module>cockpit</module>
        <module>core</module>
        <module>p13n</module>
        <module>valuehelp</module>
    </modules>

    <properties>
        <java.version>21</java.version>

        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.testSource>${java.version}</maven.compiler.testSource>
        <maven.compiler.testTarget>${java.version}</maven.compiler.testTarget>

        <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <forms.version>1.0.2</forms.version>

        <activation.version>1.1</activation.version>
        <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
        <cf-java-logging-support-logback.version>3.7.0</cf-java-logging-support-logback.version>
        <commons-beanutils.version>1.11.0</commons-beanutils.version>
        <commons-codec.version>1.17.1</commons-codec.version>
        <commons-io.version>2.21.0</commons-io.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <commons-text.version>1.11.0</commons-text.version>
        <freemarker.version>2.3.32</freemarker.version>
        <commons-collections4.version>4.5.0</commons-collections4.version>
        <hibernate.validator.version>8.0.0.Final</hibernate.validator.version>
        <jakarta.xml.bind-api.version>4.0.2</jakarta.xml.bind-api.version>
        <jackson-databind.version>2.19.1</jackson-databind.version>
        <jackson-dataformat-yaml.version>2.19.1</jackson-dataformat-yaml.version>
        <jackson-datatype-jsr310.version>2.19.1</jackson-datatype-jsr310.version>
        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
        <jansi.version>2.4.0</jansi.version>
        <jaxb-runtime.version>4.0.5</jaxb-runtime.version>
        <jedis.version>5.1.0</jedis.version>
        <jetty.version>10.0.17</jetty.version>
        <junit.version>4.13.2</junit.version>
        <jib-maven-plugin.base-image>eclipse-temurin:17</jib-maven-plugin.base-image>
        <jib-maven-plugin.version>3.4.4</jib-maven-plugin.version>
        <logback.version>1.5.24</logback.version>
        <lombok.version>1.18.42</lombok.version>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-dependency-plugin.version>3.9.0</maven-dependency-plugin.version>
        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
        <maven-plugin-api.version>3.9.12</maven-plugin-api.version>
        <maven-plugin-annotations.version>3.15.2</maven-plugin-annotations.version>
        <maven-plugin-plugin.version>3.15.2</maven-plugin-plugin.version>
        <maven-project.version>2.2.1</maven-project.version>
        <maven-shade-plugin.version>3.5.0</maven-shade-plugin.version>
        <openapi-generator-maven-plugin.version>5.20.0</openapi-generator-maven-plugin.version>
        <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
        <postgresql.version>42.7.8</postgresql.version>
        <hanadb.version>2.28.8</hanadb.version>
        <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
        <sap-cloud-sdk.version>5.20.0</sap-cloud-sdk.version>
        <sap-cloud-security.version>3.5.0</sap-cloud-security.version>
        <sap-cloud-connectivity.version>5.20.0</sap-cloud-connectivity.version>
        <sap-cloud-openapi-core.version>5.20.0</sap-cloud-openapi-core.version>
        <slf4j.version>2.0.10</slf4j.version>
        <spring-boot.version>3.2.6</spring-boot.version>
        <spring-cloud.version>4.1.0</spring-cloud.version>
        <spring-grpc.version>2.15.0.RELEASE</spring-grpc.version>
        <spring-integration-redis.version>6.1.2</spring-integration-redis.version>
        <spring-webmvc.version>5.3.30</spring-webmvc.version>
        <springdoc-openapi-starter-webmvc-ui.version>2.5.0</springdoc-openapi-starter-webmvc-ui.version>
        <versions-maven-plugin>2.17.1</versions-maven-plugin>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <distributionManagement>
        <repository>
            <id>${forms.maven.repo-id}</id>
            <url>${forms.maven.repo-url}</url>
        </repository>
        <snapshotRepository>
            <id>${forms.maven-snapshot.repo-id}</id>
            <url>${forms.maven-snapshot.repo-url}</url>
        </snapshotRepository>
    </distributionManagement>
</project>